snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha256
e2f4f47116189da974bd8d7106767c77936c6f9293380d574d6f91ac9b3bf3ca